# visit_management

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  package.json  pyproject.toml
frontend/: README.md
frontend/src-overrides/crm/src/: router.js
visit_management/: __init__.py  crm_integration.py  hooks.py  modules.txt  patches.txt  tasks.py  utils.py
visit_management/patches/: 2025_11_04_consolidate_visit_report.py  2025_11_10_fix_geolocation_serialization.py  2025_11_11_add_roles_and_workflow.py  2025_11_11_remove_visit_workflow_if_any.py  2026_01_24_migrate_notes_to_additional_notes.py  __init__.py
visit_management/visit_management/: __init__.py  api.py  settings_utils.py
visit_management/visit_management/custom_html_block/visits_kpi_panel/: visits_kpi_panel.json
visit_management/visit_management/dashboard_chart/visits_created/: visits_created.json
visit_management/visit_management/doctype/visit/: visit.js  visit.json  visit.py
visit_management/visit_management/doctype/visit_checkin_role/: visit_checkin_role.json  visit_checkin_role.py
visit_management/visit_management/doctype/visit_log/: visit_log.json  visit_log.py
visit_management/visit_management/doctype/visit_management_settings/: visit_management_settings.json  visit_management_settings.py
visit_management/visit_management/doctype/visit_photo/: visit_photo.json  visit_photo.py
visit_management/visit_management/doctype/visit_report/: visit_report.json  visit_report.py
visit_management/visit_management/doctype/weekly_schedule/: weekly_schedule.js  weekly_schedule.json  weekly_schedule.py
(+19 files in other folders)
