[project]
name = "visit_management"
authors = [
    { name = "Promise Otigba", email = "ops@example.com"}
]
description = "Visit Management app for Frappe CRM backend (DocTypes, hooks, scheduler)."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Optional metadata to document Bench app dependencies (installed via bench, not pip)
[project.optional-dependencies]
apps = [
    "frappe>=15,<16",
    "crm",
    "erpnext>=15,<16",
    "hrms>=15,<16",
]

[tool.bench.dev-dependencies]

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [
    "**/doctype/*/boilerplate/*.py"
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
]
ignore = [
    "E101",
    "E402",
    "E501",
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "W191",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
